--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start-server": "tsc && node ./dist/server.js",
-    "start-client": "tsc && node ./dist/client.js",
+    "start-first-service": "tsc && node ./dist/first-service.js",
+    "start-second-service": "tsc && node ./dist/second-service.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,10 +20,13 @@
   },
   "homepage": "https://github.com/cr9169/rabbitMQ#readme",
   "dependencies": {
-    "amqplib": "^0.10.3"
+    "amqplib": "^0.10.3",
+    "express": "^4.18.2",
+    "fs": "^0.0.1-security"
   },
   "devDependencies": {
     "@types/amqplib": "^0.8.2",
+    "@types/express": "^4.17.14",
     "typescript": "^4.8.4"
   }
 }
